k8s/registry-api/registry-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-api
  template:
    metadata:
      labels:
        app: registry-api
# Enabling auto-instrumentation causes metrics to fail with the following error, so disable for now:
# {"stack":"Error: PeriodicExportingMetricReader: metrics export failed (error Error: 13 INTERNAL: Received RST_STREAM with code 2 triggered by internal client error: Protocol error)\n    at doExport (/otel-auto-instrumentation/node_module)
#      annotations:
#        instrumentation.opentelemetry.io/inject-nodejs: "true" # Works, as it triggers all kinds of log messages
    spec:
      containers:
        - name: app
          image: ghcr.io/netwerk-digitaal-erfgoed/dataset-register
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr
