k8s/registry-api/registry-api-ingress-redirect.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-api-redirect
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://datasetregister.netwerkdigitaalerfgoed.nl/api
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/register-api)$ $1/ redirect;
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /register-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: registry-demo
                port:
                  number: 80
