k8s/registry-api/registry-api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/register-api)$ $1/ redirect;
spec:
  ingressClassName: nginx
  rules:
    - host: demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /register-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: registry-api
                port:
                  number: 80
